# DualLink

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/instructions/design/: api-contracts.instructions.md  architecture.instructions.md  patterns.instructions.md
.github/instructions/golden-tips/: _index.instructions.md  general.instructions.md  linux.instructions.md  macos.instructions.md  webrtc.instructions.md
.github/instructions/platform/: linux-rust.instructions.md  macos-swift.instructions.md  shared-protocol.instructions.md
.github/instructions/roles/: architect.instructions.md  debugger.instructions.md  implementer.instructions.md  reviewer.instructions.md
.github/instructions/workflows/: performance.instructions.md  research.instructions.md  testing.instructions.md
.github/workflows/: ci.yml
ai-agent-instructions/: AGENT_PROMPT.md
docs/: MILESTONES.md  PROGRESS.md  TECHNICAL_RESEARCH.md  WORK_PLAN.md
infra/linux/: duallink-receiver.desktop  duallink-receiver.service  install.sh
infra/usb-gadget/: README.md  duallink-usb-gadget.service  setup-usb-gadget.sh  teardown-usb-gadget.sh
linux-receiver/: Cargo.toml
linux-receiver/crates/duallink-app/: Cargo.toml
linux-receiver/crates/duallink-app/src/: app.rs  main.rs
linux-receiver/crates/duallink-core/: Cargo.toml
linux-receiver/crates/duallink-core/src/: config.rs  errors.rs  input.rs  lib.rs  types.rs  usb.rs
linux-receiver/crates/duallink-decoder/: Cargo.toml
linux-receiver/crates/duallink-decoder/src/: lib.rs
linux-receiver/crates/duallink-discovery/: Cargo.toml
linux-receiver/crates/duallink-discovery/src/: advertiser.rs  lib.rs
linux-receiver/crates/duallink-gui/: Cargo.toml
linux-receiver/crates/duallink-gui/src/: gui_app.rs  main.rs  receiver.rs  state.rs
linux-receiver/crates/duallink-input/: Cargo.toml
linux-receiver/crates/duallink-input/src/: lib.rs
linux-receiver/crates/duallink-renderer/: Cargo.toml
linux-receiver/crates/duallink-renderer/src/: lib.rs
linux-receiver/crates/duallink-signaling/: Cargo.toml
linux-receiver/crates/duallink-signaling/src/: lib.rs
linux-receiver/crates/duallink-transport/: Cargo.toml
linux-receiver/crates/duallink-transport/src/: lib.rs
linux-receiver/crates/duallink-webrtc/: Cargo.toml
linux-receiver/crates/duallink-webrtc/src/: lib.rs
linux-sender/: Cargo.toml  README.md
linux-sender/crates/duallink-capture-linux/: Cargo.toml
linux-sender/crates/duallink-capture-linux/src/: lib.rs
linux-sender/crates/duallink-linux-sender/: Cargo.toml
linux-sender/crates/duallink-linux-sender/src/: encoder.rs  input_inject.rs  main.rs  pipeline.rs  ui.rs
linux-sender/crates/duallink-transport-client/: Cargo.toml
linux-sender/crates/duallink-transport-client/src/: lib.rs  signaling.rs  video_sender.rs
mac-client/: DualLink.command  Makefile  Package.swift  create-signing-cert.sh  install.sh  run_app.sh
mac-client/.swiftpm/xcode/package.xcworkspace/xcuserdata/cassianomedeiros.xcuserdatad/: UserInterfaceState.xcuserstate
mac-client/.swiftpm/xcode/xcuserdata/cassianomedeiros.xcuserdatad/xcschemes/: xcschememanagement.plist
mac-client/DualLink.app/Contents/MacOS/: DualLink
mac-client/Sources/Discovery/: DiscoveryService.swift
mac-client/Sources/DualLinkApp/: ContentView.swift  DisplayStreamPipeline.swift  DualLinkApp.swift
mac-client/Sources/DualLinkApp/Resources/: DualLink.entitlements  Info.plist  adhoc.entitlements
mac-client/Sources/DualLinkCore/: Models.swift
mac-client/Sources/InputInjection/: InputInjection.swift
mac-client/Sources/ScreenCapture/: ScreenCaptureManager.swift
mac-client/Sources/Signaling/: Signaling.swift
mac-client/Sources/Streaming/: Streaming.swift
mac-client/Sources/Transport/: TransportBenchmark.swift  TransportDiscovery.swift
mac-client/Sources/VideoEncoder/: VideoEncoder.swift
mac-client/Sources/VirtualDisplay/: VirtualDisplayManager.swift
mac-client/Sources/VirtualDisplayObjC/: DualLinkVirtualDisplayHelper.m
mac-client/Sources/VirtualDisplayObjC/include/: DualLinkVirtualDisplayHelper.h
mac-client/Tests/DualLinkTests/: DualLinkTests.swift
poc/poc-gstreamer/: Cargo.toml  README.md  probe.sh  setup.sh
poc/poc-gstreamer/src/: main.rs
poc/poc-screen-capture/: Package.swift  main.swift
poc/poc-virtual-display/: README.md  main.swift
poc/poc-virtual-display-app/: Info.plist  Package.swift  build_and_run.sh  entitlements.plist
poc/poc-virtual-display-app/ObjCHelper/: VirtualDisplayModeHelper.m
poc/poc-virtual-display-app/ObjCHelper/include/: VirtualDisplayModeHelper.h
poc/poc-virtual-display-app/Sources/: main.swift
windows-receiver/: README.md
windows-sender/: Cargo.toml  README.md
windows-sender/crates/duallink-capture-windows/: Cargo.toml
windows-sender/crates/duallink-capture-windows/src/: lib.rs  stub.rs  wgc.rs
windows-sender/crates/duallink-windows-sender/: Cargo.toml
windows-sender/crates/duallink-windows-sender/src/: encoder.rs  input_inject.rs  main.rs  pipeline.rs  ui.rs
