[package]
name = "duallink-app"
description = "DualLink Linux receiver — binary entry point"
version.workspace = true
edition.workspace = true

[[bin]]
name = "duallink-receiver"
path = "src/main.rs"

[dependencies]
duallink-core = { path = "../duallink-core" }
duallink-decoder = { path = "../duallink-decoder" }
duallink-renderer = { path = "../duallink-renderer" }
duallink-transport = { path = "../duallink-transport" }
duallink-webrtc = { path = "../duallink-webrtc" }
duallink-signaling = { path = "../duallink-signaling" }
duallink-discovery = { path = "../duallink-discovery" }
duallink-input = { path = "../duallink-input" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
