[package]
name = "duallink-decoder"
description = "H.264/H.265 hardware video decoding via GStreamer (VAAPI/NVDEC) — Sprint 1.4"
version.workspace = true
edition.workspace = true

[dependencies]
duallink-core = { path = "../duallink-core" }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
anyhow.workspace = true

# GStreamer Rust bindings (requires GStreamer ≥ 1.22 + libgstreamer-dev installed)
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
