[package]
name = "duallink-discovery"
description = "mDNS/Bonjour service discovery and advertisement"
version.workspace = true
edition.workspace = true

[dependencies]
duallink-core = { path = "../duallink-core" }
tokio.workspace = true
tracing.workspace = true
mdns-sd.workspace = true
thiserror.workspace = true
hostname = "0.4"
