[package]
name = "duallink-input"
description = "Input capture and forwarding (mouse, keyboard events) to macOS"
version.workspace = true
edition.workspace = true

[dependencies]
duallink-core = { path = "../duallink-core" }
egui.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
