[package]
name = "duallink-transport"
description = "UDP video receiver + TCP signaling server (Sprint 1.4)"
version.workspace = true
edition.workspace = true

[dependencies]
duallink-core = { path = "../duallink-core" }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rcgen.workspace = true
