[package]
name = "duallink-webrtc"
description = "WebRTC receiver for video streaming (Wi-Fi mode)"
version.workspace = true
edition.workspace = true

[dependencies]
duallink-core = { path = "../duallink-core" }
duallink-transport = { path = "../duallink-transport" }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
bytes.workspace = true

# WebRTC — adicionar em Sprint 1.2.2
# webrtc = "0.10"
