[package]
name        = "duallink-linux-sender"
description = "DualLink Linux sender — share your Linux screen with a DualLink receiver"
edition.workspace = true
version.workspace  = true
authors.workspace  = true
license.workspace  = true

[[bin]]
name = "duallink-sender"
path = "src/main.rs"

[dependencies]
duallink-core             = { workspace = true }
duallink-capture-linux    = { path = "../duallink-capture-linux" }
duallink-transport-client = { workspace = true }
anyhow        = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
eframe        = { workspace = true }
egui          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
bytes         = { workspace = true }
gstreamer     = { workspace = true }
gstreamer-app = { workspace = true }
hostname      = { workspace = true }
