[package]
name        = "duallink-transport-client"
description = "DualLink sender-side transport: TLS signaling client + UDP DLNK video sender"
edition.workspace = true
version.workspace  = true
authors.workspace  = true
license.workspace  = true

[dependencies]
duallink-core = { workspace = true }
anyhow        = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
bytes         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
rustls        = { workspace = true }
tokio-rustls  = "0.26"
